--- a/HealingArts/Base.lproj/LaunchScreen.storyboard
+++ b/HealingArts/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="unmc" translatesAutoresizingMaskIntoConstraints="NO" id="cIO-2g-baa">
-                                <rect key="frame" x="63" y="313" width="289" height="271"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unmc" translatesAutoresizingMaskIntoConstraints="NO" id="cIO-2g-baa">
+                                <rect key="frame" x="7" y="248" width="400" height="400"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.68627450980392157" green="0.062745098039215685" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cIO-2g-baa" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="VdD-FY-7Mt"/>
+                            <constraint firstItem="cIO-2g-baa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cUn-Ao-bue"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
